<resources>
    <string name="app_name">MovieTicketsApp</string>
    <string name="action_settings">Settings</string>

    <string name="textViewSpinnerLabel">Ticket Type</string>
    <string-array name="ticketTypeItems">
        <item >Adult</item>
        <item >Student</item>
        <item >Child</item>
        <item >OAP</item>
        <item >Family</item>
    </string-array>

    <string name="loyaltyCheckBox">Loyalty Card</string>

    <string name="numTicketsEditText">Number of Tickets</string>

    <string name="calcPrice">Calculate Price</string>

    <string name="priceLabel">Price</string>

</resources>
